docs(modules): add comprehensive module README documentation across all 5 submodules